--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300|Ubuntu:300);
+@import url(//fonts.googleapis.com/css?family=Lato:300|Ubuntu:300);
 
 * {
     margin: 0;
